crates/swc_ecma_parser/tests/flow/types/object/unexpected_static_004.js
// error: static prop named static
type E = { static static: X }
